# mapa_ssp

./: README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml  parameters_raspagem.yml
depreciado_kedro_0.17.6/: pyproject.toml
depreciado_kedro_0.17.6/conf/base/: catalog.yml  parameters.yml
depreciado_kedro_0.17.6/conf/base/parameters/: raspagem.yml
depreciado_kedro_0.17.6/data/01_raw/10/: ProdutividadePolicial-Delegacia 001 DP - Sé.csv  ProdutividadePolicial-Delegacia 002 DP - Bom Retiro.csv  ProdutividadePolicial-Delegacia 003 DP - Campos Elísios.csv  ProdutividadePolicial-Delegacia 004 DP - Consolação.csv  ProdutividadePolicial-Delegacia 005 DP - Aclimação.csv  ProdutividadePolicial-Delegacia 006 DP - Cambuci.csv  ProdutividadePolicial-Delegacia 007 DP - Lapa.csv  ProdutividadePolicial-Delegacia 008 DP - Brás.csv  ProdutividadePolicial-Delegacia 009 DP - Carandiru.csv  ProdutividadePolicial-Delegacia 01 DP Pessoa com Deficiência.csv  ProdutividadePolicial-Delegacia 010 DP - Penha de França.csv  (+108 more)
depreciado_kedro_0.17.6/source/: conf.py  index.rst
depreciado_kedro_0.17.6/src/: requirements.in  requirements.txt  setup.py
depreciado_kedro_0.17.6/src/mapa_ssp/: __init__.py  __main__.py  pipeline_registry.py  settings.py
depreciado_kedro_0.17.6/src/tests/: test_run.py
docs/source/: conf.py  index.rst  scrapping.rst
notebooks/: selenium_debug.ipynb
src/: pyproject.toml  requirements.txt  requirements_poetry.txt
src/mapa_ssp/: __main__.py  pipeline_registry.py  settings.py
src/tests/: test_run.py
(+1711 files in other folders)
