[tool.kedro]
package_name = "mapa_ssp"
project_name = "Mapa SSP"
kedro_init_version = "0.18.13"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/mapa_ssp -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "mapa-ssp"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # "^3.10"
selenium = "^4.12.0"
kedro = ">=0.18.13,<0.19.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
kedro-viz = "^6.5.0"
kedro-static-viz = "^0.4.4"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
